--- a/styles/home.scss
+++ b/styles/home.scss
@@ -59,6 +59,9 @@
     .message-content {
       flex: 8;
     }
+    .message-img{
+      width:60%;
+    }
 
     .message-username {
       flex: 2;
